--- a/sign_in.html
+++ b/sign_in.html
@@ -8,7 +8,7 @@
 <body>
     <div class="header">
         <div class="header-left">
-            <a href="base.html" class="logo" >Online Learning API</a>
+            <a href="index.html" class="logo" >Online Learning API</a>
             <a href="list_users.html">Users</a>
         </div>
         <div class="header-right">
