add animation to users list; add student.html and tutor.html

--- a/list_users.html
+++ b/list_users.html
@@ -20,91 +20,124 @@
     <div class="title"><h1>List of users</h1></div>
     <div class="flex-row-center">
         <div class="user_card">
-          <h3>Maksym Syrvatka</h3>
-          <p class="role">Student</p>
-          <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          <a href="student.html">
+              <h3>Maksym Syrvatka</h3>
+              <p class="role">Student</p>
+              <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          </a>
         </div>
         <div class="user_card">
-          <h3>Tom Brown</h3>
-          <p class="role">Tutor</p>
-          <p class="courses_list">Courses: English, Literature</p>
+          <a href="tutor.html">
+              <h3>Tom Brown</h3>
+              <p class="role">Tutor</p>
+              <p class="courses_list">Courses: English, Literature</p>
+          </a>
         </div>
         <div class="user_card">
-          <h3>Tom Brown</h3>
-          <p class="role">Tutor</p>
-          <p class="courses_list">Courses: English, Literature</p>
+          <a href="student.html">
+              <h3>Maksym Syrvatka</h3>
+              <p class="role">Student</p>
+              <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          </a>
         </div>
         <div class="user_card">
-          <h3>Tom Brown</h3>
-          <p class="role">Tutor</p>
-          <p class="courses_list">Courses: English, Literature</p>
+          <a href="student.html">
+              <h3>Maksym Syrvatka</h3>
+              <p class="role">Student</p>
+              <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          </a>
         </div>
         <div class="user_card">
-          <h3>Tom Brown</h3>
-          <p class="role">Tutor</p>
-          <p class="courses_list">Courses: English, Literature</p>
+          <a href="student.html">
+              <h3>Maksym Syrvatka</h3>
+              <p class="role">Student</p>
+              <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          </a>
         </div>
         <div class="user_card">
-          <h3>Tom Brown</h3>
-          <p class="role">Tutor</p>
-          <p class="courses_list">Courses: English, Literature</p>
+          <a href="student.html">
+              <h3>Maksym Syrvatka</h3>
+              <p class="role">Student</p>
+              <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          </a>
         </div>
         <div class="user_card">
-          <h3>Tom Brown</h3>
-          <p class="role">Tutor</p>
-          <p class="courses_list">Courses: English, Literature</p>
+          <a href="student.html">
+              <h3>Maksym Syrvatka</h3>
+              <p class="role">Student</p>
+              <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          </a>
         </div>
         <div class="user_card">
-          <h3>Tom Brown</h3>
-          <p class="role">Tutor</p>
-          <p class="courses_list">Courses: English, Literature</p>
+          <a href="tutor.html">
+              <h3>Tom Brown</h3>
+              <p class="role">Tutor</p>
+              <p class="courses_list">Courses: English, Literature</p>
+          </a>
         </div>
         <div class="user_card">
-          <h3>Tom Brown</h3>
-          <p class="role">Tutor</p>
-          <p class="courses_list">Courses: English, Literature</p>
+          <a href="tutor.html">
+              <h3>Tom Brown</h3>
+              <p class="role">Tutor</p>
+              <p class="courses_list">Courses: English, Literature</p>
+          </a>
         </div>
         <div class="user_card">
-          <h3>Maksym Syrvatka</h3>
-          <p class="role">Student</p>
-          <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          <a href="tutor.html">
+              <h3>Tom Brown</h3>
+              <p class="role">Tutor</p>
+              <p class="courses_list">Courses: English, Literature</p>
+          </a>
         </div>
         <div class="user_card">
-          <h3>Maksym Syrvatka</h3>
-          <p class="role">Student</p>
-          <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          <a href="tutor.html">
+              <h3>Tom Brown</h3>
+              <p class="role">Tutor</p>
+              <p class="courses_list">Courses: English, Literature</p>
+          </a>
         </div>
         <div class="user_card">
-          <h3>Maksym Syrvatka</h3>
-          <p class="role">Student</p>
-          <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          <a href="tutor.html">
+              <h3>Tom Brown</h3>
+              <p class="role">Tutor</p>
+              <p class="courses_list">Courses: English, Literature</p>
+          </a>
         </div>
         <div class="user_card">
-          <h3>Maksym Syrvatka</h3>
-          <p class="role">Student</p>
-          <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          <a href="tutor.html">
+              <h3>Tom Brown</h3>
+              <p class="role">Tutor</p>
+              <p class="courses_list">Courses: English, Literature</p>
+          </a>
         </div>
         <div class="user_card">
-          <h3>Maksym Syrvatka</h3>
-          <p class="role">Student</p>
-          <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          <a href="student.html">
+              <h3>Maksym Syrvatka</h3>
+              <p class="role">Student</p>
+              <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          </a>
         </div>
         <div class="user_card">
-          <h3>Maksym Syrvatka</h3>
-          <p class="role">Student</p>
-          <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          <a href="student.html">
+              <h3>Maksym Syrvatka</h3>
+              <p class="role">Student</p>
+              <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          </a>
         </div>
         <div class="user_card">
-          <h3>Maksym Syrvatka</h3>
-          <p class="role">Student</p>
-          <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          <a href="student.html">
+              <h3>Maksym Syrvatka</h3>
+              <p class="role">Student</p>
+              <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          </a>
         </div>
         <div class="user_card">
-          <h3>Maksym Syrvatka</h3>
-          <p class="role">Student</p>
-          <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          <a href="student.html">
+              <h3>Maksym Syrvatka</h3>
+              <p class="role">Student</p>
+              <p class="courses_list">Courses: English, Math, Ukrainian</p>
+          </a>
         </div>
     </div>
-
 </body>
 </html>
